app/assets/stylesheets/common/base/modal.scss
/* ... */
.reply-where-modal {
  max-width: 400px;

  h1 {
    margin: 0;
    font-size: $font-up-2;
  }

  .d-modal-cancel {
    width: 100%;
    margin: 0.5em 0;
  }

  .btn {
    display: block;
    text-align: left;
    font-size: $font-up-1;
    line-height: $line-height-medium;
    margin-bottom: 0.75em;
    font-weight: bold;
    overflow: hidden;
    width: 100%;
    &:first-of-type {
      margin-top: 0.25em;
    }
    .topic-title {
      font-weight: normal;
    }
  }
}

.d-modal-cancel {
  margin-left: 1em;
  color: var(--primary-medium);
  &:hover {
    color: var(--danger);
  }
}

.delete-user-modal {
  .modal-footer {
    .btn {
      line-height: $line-height-medium;
    }
  }
}

.admin-delete-user-posts-progress-modal {
  .progress-bar {
    height: 15px;
    position: relative;
    background: var(--primary-low-mid);
    border-radius: 25px;
    overflow: hidden;
    margin: 30px 0 20px;
    span {
      display: block;
      width: 0%;
      height: 100%;
      background-color: var(--tertiary);
      position: relative;
      transition: width 0.6s linear;
    }
  }
}

.incoming-email-modal {
  .btn {
    transition: none;
    background-color: transparent;
    margin-right: 5px;
    &:hover,
    &.active {
      color: var(--primary);
    }
    &.active {
      font-weight: bold;
    }
    &:focus {
      outline: 2px solid var(--primary-low);
    }
  }
  .incoming-email-tabs {
    margin-bottom: 15px;
  }
  .incoming-email-content {
    height: 300px;
    max-width: 700px;
    width: 90vw; // forcing textarea wider
    textarea,
    .incoming-email-html-part {
      height: 95%;
      border: none;
      border-top: 1px solid var(--primary-low);
      padding-top: 10px;
    }
    textarea {
      font-family: monospace;
      resize: none;
      border-radius: 0;
      box-shadow: none;
    }
    .incoming-email-html-part {
      width: calc(100% - 36px);
      padding: 10px 4px 4px 4px;
    }
    @media screen and (max-width: 760px) {
      .incoming-email-html-part {
        width: calc(100% - 10px);
      }
    }
  }
}

.modal .modal-body.change-timestamp {
  #date-container {
    .pika-single {
      width: 100%;
      box-sizing: border-box;
      display: flex;
      justify-content: center;
    }
  }

  form {
    display: flex;

    .date-picker-wrapper,
    input[type="time"] {
      width: 50%;
    }

    .date-picker-wrapper {
      display: flex;
      flex: 1;

      .date-picker {
        flex: 1;
      }
    }

    input.date-picker,
    input[type="time"] {
      text-align: left;
      margin: 0;
    }
  }
}

.change-timestamp {
  max-width: 420px;
}

.change-timestamp {
  #date-container {
    .pika-single {
      position: relative !important; // overriding another important
      display: inline-block;
      margin-top: 0.5em;
    }
  }

  .date-picker-wrapper {
    min-width: 130px;
    margin-right: 0.5em;
  }

  input[type="time"] {
    width: 130px;
  }

  form {
    margin: 0;
  }
}

.flag-modal-body {
  max-height: 450px;
  .flag-action-type-details {
    width: 100%;
    max-width: 500px;
    line-height: $line-height-large;
  }
}

.flag-message {
  margin: 0;
}

.custom-message-length {
  color: var(--primary-medium);
  font-size: $font-down-1;
}

.jump-to-post-modal {
  .modal-inner-container {
    max-width: 350px;
  }
  .modal-body {
    overflow-y: visible;
    #post-jump,
    .date-picker {
      margin: 0;
      width: 100px;
    }

    .input-hint-text {
      color: var(--primary);
    }

    .jump-to-post-control .index {
      color: var(--primary-medium);
    }

    .jump-to-date-control .input-hint-text {
      margin-left: 0;
    }

    .separator {
      display: flex;
      align-items: center;
      margin: 0.5em auto;

      hr {
        flex: 1 0 0px;
      }

      .text {
        margin: 0 0.5em 0 0;
        color: var(--primary-medium);
      }
    }
  }
}

// move-to topic modal
.choose-topic-modal {
  #split-topic-name,
  #choose-topic-title,
  #choose-message-title {
    width: 100%;
  }

  .category-chooser {
    margin-bottom: 9px;
    width: 100% !important;
    .category-row {
      max-width: 485px;
    }
  }

  .controls.existing-topic {
    margin-bottom: 0.75em;
  }

  // move to existing topic
  .existing-topic {
    .radio {
      flex-wrap: wrap;
    }
    .topic-title {
      max-width: 90%;
    }
    .topic-categories {
      width: 100%;
    }
  }
}

.publish-page-modal {
  .modal-body {
    p.publish-description {
      margin-top: 0;
    }
    input.publish-slug {
      width: 100%;
    }

    .publish-url {
      margin-bottom: 1em;
      .example-url,
      .invalid-slug {
        font-weight: bold;
      }
    }

    .publish-slug:disabled {
      cursor: not-allowed;
    }

    .controls {
      margin-bottom: 1em;

      .description {
        margin: 0;
        display: flex;
        align-items: center;
      }
    }
  }

  .modal-footer {
    display: flex;

    .close-publish-page {
      margin-left: auto;
      margin-right: 0;
    }
  }
}

.ignore-duration-with-username-modal {
  .future-date-input {
    margin-top: 1em;
  }
}

.modal:not(.has-tabs) {
  .modal-tab {
    position: absolute;
    width: 95%;
  }
}

.modal {
  &.has-tabs {
    .modal-tabs {
      display: inline-flex;
      flex-wrap: wrap;
      flex: 1 0 auto;
      margin: 0;

      .modal-tab {
        list-style: none;
        padding: 4px 8px;
        margin-right: 4px;
        cursor: pointer;

        &.is-active {
          color: var(--secondary);
          background: var(--danger);

          &.single-tab {
            background: none;
            color: var(--primary);
            padding: 4px 0;
          }
        }
      }
    }
  }
}
/* ... */

